Reset cookie partitioning state after network process crashes https://bugs.webkit.org/show_bug.cgi?id=174306 <rdar://problem/33171605>

Reviewed by Chris Dumez.

Source/WebKit2:

* UIProcess/Storage/ResourceLoadStatisticsStore.cpp:
(WebKit::ResourceLoadStatisticsStore::fireShouldPartitionCookiesHandler): Move cookie
partioning state code to helper function.
(WebKit::ResourceLoadStatisticsStore::resetPartitionCookiesState): Added.
* UIProcess/Storage/ResourceLoadStatisticsStore.h:
* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::ensureNetworkProcess): Inform the statistics store that
the network process crashed.
(WebKit::WebProcessPool::terminateNetworkProcess): Mark network process as crashed.
* UIProcess/WebResourceLoadStatisticsStore.cpp:
(WebKit::WebResourceLoadStatisticsStore::networkProcessDidCrash): Reset the cookie
partitioning state after a crash.
* UIProcess/WebResourceLoadStatisticsStore.h:
* UIProcess/WebsiteData/WebsiteDataStore.cpp:
(WebKit::WebsiteDataStore::notifyResourceLoadStatisticsNetworkProcessDidCrash): Relay
information to the statistics store.
* UIProcess/WebsiteData/WebsiteDataStore.h:

LayoutTests:

* http/tests/loading/resourceLoadStatistics/partitioned-and-unpartitioned-cookie-with-network-process-crash-expected.txt: Added.
* http/tests/loading/resourceLoadStatistics/partitioned-and-unpartitioned-cookie-with-network-process-crash.html: Added.
* http/tests/loading/resourceLoadStatistics/resources/get-cookies.php:
* http/tests/loading/resourceLoadStatistics/resources/set-cookie.php:


Canonical link: https://commits.webkit.org/191194@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219352 268f45cc-cd09-0410-ab3c-d52691b4dbfc