LayoutTests/http/tests/loading/resourceLoadStatistics/resources/get-cookies.php
@@ -10,6 +10,13 @@ if(!isset($_COOKIE[$_GET["name2"]])) {
 } else {
     echo "Received cookie named '" . $_GET["name2"] . "'.<br>";
 }
+if(!empty($_GET["name3"])) {
+    if(!isset($_COOKIE[$_GET["name3"]])) {
+        echo "Did not receive cookie named '" . $_GET["name3"] . "'.<br>";
+    } else {
+        echo "Received cookie named '" . $_GET["name3"] . "'.<br>";
+    }
+}
 ?>
 <p id="output"></p>
 <script>
