LayoutTests/http/tests/loading/resourceLoadStatistics/resources/set-cookie.php
@@ -1,5 +1,5 @@
 <?php
-setcookie($_GET["name"], $_GET["value"], 0, "/");
+setcookie($_GET["name"], $_GET["value"], (time()+60*60*24*30), "/");
 echo $_GET["message"] . "<br>";
 ?>
 <script>
